# autoholidays

./: .flake8  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: MEMORY.md
.claude/agents/: example.md  python.md
.github/: dependabot.yml
.github/workflows/: linting.yml  publish.yml  stale.yml
autoholidays/: VERSION  __init__.py  api.py  calendar.py  calendar_.py  core.py  person.py  planner.py
autoholidays/core/: __init__.py  algorithms.py  calendar.py  person.py  signature.py  static.py
examples/: Find Long Weekends from Holiday List.ipynb  Untitled.ipynb  Using AutoHoliday - a basic guide.ipynb  [TEMPORARY] Auto Holidays Example.ipynb
